--- a/views/menu.ejs
+++ b/views/menu.ejs
@@ -1,29 +1,16 @@
-<!DOCTYPE html>
+
+<%include partials/_header%>
 <html>
 
-<head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <title>Bootstrap 101: Learn Bootstrap in 60 minutes by Bootstrapious.com</title>
-    <meta name="description" content="">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <meta name="robots" content="all,follow">
-    <!-- Bootstrap CSS-->
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/css/bootstrap.min.css">
-    <!-- Custom stylesheet - for your changes-->
-    <link rel="stylesheet" href="css/custom.css">
-    <!-- Tweaks for older IEs-->
-    <!--[if lt IE 9]>
-        <script src="https://oss.maxcdn.com/html5shiv/3.7.3/html5shiv.min.js"></script>
-        <script src="https://oss.maxcdn.com/respond/1.4.2/respond.min.js"></script><![endif]-->
-</head>
-
-<body>
+  <body>
 
     <!-- Burgers Layout -->
   <section class="bg-light">
   <div class="container">
-    <h2>Burgers</h2>
+    <br>
+    <br>
+    <br>
+    <h2 class="m-6">Burgers</h2>
     <p class="lead text-muted mb-5">Bacon ipsum dolor amet cupim turducken cow kielbasa capicola t-bone. Tail turducken tri-tip alcatra, drumstick strip steak cow pork loin leberkas tongue pancetta beef. Bacon pork chop tail pastrami ribeye alcatra bresaola ground round shankle venison boudin brisket picanha kevin. Short ribs picanha t-bone sirloin, pancetta biltong kielbasa brisket cow beef ribs. Ground round pancetta rump strip steak venison. Frankfurter flank beef ribs, pastrami shankle beef chicken ham hock tri-tip doner fatback turkey. Buffalo meatball ball tip tri-tip turducken short ribs beef ribs sirloin ham ground round biltong pancetta chicken bacon.</p>
     <div class="row">
       <%dishes.forEach(dish => {%>
@@ -62,25 +49,17 @@
       <%})%>
     </div>
     </section>
-
-    <!-- TOAST OPTION -->
-    <div id="submit-toast" aria-live="polite" aria-atomic="true" class="d-flex justify-content-center align-items-center" style="min-height: 200px;">
-
-    <!-- Then put toasts within -->
-    <div  class="toast" role="alert" aria-live="assertive" aria-atomic="true">
-        <div class="toast-header">
-          <img src="..." class="rounded mr-2" alt="...">
-          <strong class="mr-auto">Bootstrap</strong>
-            <small>11 mins ago</small>
-            <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
-              <span aria-hidden="true">&times;</span>
-            </button>
-          </div>
-          <div class="toast-body">
-            Hello, world! This is a toast message.
-          </div>
-        </div>
+    <!-- Flexbox container for aligning the toasts -->
+    <div class="toast" id="submit-toast" role="alert" style="position: fixed; top: 78px; left: 100px;" aria-live="assertive" aria-atomic="true" data-delay="2000">
+      <div class="toast-header">
+        <img src="https://findicons.com/files/icons/1964/colorcons_green/128/checkmark.png" class="rounded mr-2" alt="fast food Icon" width="30" height="30">
+        <strong class="mr-auto">Confirmed!</strong>
+        <button type="button" class="ml-2 mb-1 close" data-dismiss="toast" aria-label="Close">
+          <span aria-hidden="true">&times;</span>
+        </button>
       </div>
+      <div class="toast-body">Item has been successfully added to cart.</div>
+    </div>
 
 
 
@@ -90,3 +69,4 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/twitter-bootstrap/4.1.3/js/bootstrap.bundle.min.js"></script>
   </body>
 </html>
+<%include partials/_footer%>
