--- a/views/originalmenu.ejs
+++ b/views/originalmenu.ejs
@@ -77,3 +77,62 @@
   </div>
  </body>
 </html>
+
+
+
+
+
+<!--COULD DELETED AFTER NAV BAR FOR PARTIAL-->
+
+
+  <!--OLD VERSION-->
+  <nav class="navbar fixed-top navbar-expand-md navbar-dark bg-dark">
+  <a class="navbar-brand" href="#">Logo</a>
+  <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+    <span class="navbar-toggler-icon"></span>
+  </button>
+  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+    <div class="navbar-nav">
+      <a class="nav-item nav-link active" href="/">Home <span class="sr-only">(current)</span></a>
+      <a class="nav-item nav-link" href="#">About Us</a>
+      <a class="nav-item nav-link" href="#">Contact</a>
+    </div>
+    <div class="collapse navbar-collapse">
+    <a id="order-confirmation" class="nav-item nav-link" href="/cart">
+      <i class="material-icons">shopping_cart</i>
+      </a>
+  </div>
+</nav>
+  </header>
+
+
+  <section class="home-content">
+  <div id="carouselExampleSlidesOnly" class="carousel-slide " data-ride="carousel">
+  <div class="carousel-inner">
+    <div class="carousel-item active">
+        <img src="/images/Main-Page-Photo.jpg" class="d-block w-100" alt="friends around a table eating burgers">
+    </div>
+    <div class="carousel-item">
+      <img src="/images/lunchbrunch.jpg" class="d-block w-100" alt="...">
+    </div>
+    <div class="carousel-item">
+      <img src="/images/meanbite.jpg" class="d-block w-100" alt="...">
+    </div>
+  </div>
+</div>
+
+
+
+<!-- THIS IS THE OLD HOME PAGE WHICH WAS WRAPPED IN A <body> tag-->
+<!--  <img class="home-image" src="/images/Main-Page-Photo.jpg" alt="Customers sharing burger experience."> TESTING REMOVED FIRST LOOK-->
+  <p>Bacon ipsum dolor amet prosciutto brisket ribeye drumstick landjaeger. Turkey pork chop capicola short loin. Fatback spare ribs turducken porchetta hamburger shank. Brisket tri-tip doner flank. Sausage shoulder spare ribs prosciutto, ribeye beef ribs andouille porchetta hamburger tri-tip capicola ground round boudin ham.
+  </p>
+  <p>
+  Chuck meatloaf kielbasa, corned beef turkey sausage pork belly andouille pork chop burgdoggen swine. Sausage hamburger t-bone prosciutto corned beef chicken. Turducken tenderloin shoulder doner ham hock.
+  </p>
+  </section>
+  <section class="button-prompt">
+  <form method="GET" action="/dishes">
+  <button type="submit" class="btn btn-dark btn-lg btn-block">Order Now!</button>
+  </form>
+  </section>
