--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,6 +4,7 @@
 
 <html>
   <body>
+  <!--Carousel Layout-->
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
     <div class="carousel-inner">
       <div class="carousel-item active">
@@ -55,6 +56,39 @@
         </div>
       </div>
     </section>
+
+    <!-- Testimonials -->
+    <section class="testimonials text-center bg-dark">
+      <div class="container">
+        <h2 class="mb- text-white">What people are saying...</h2>
+        <div class="row">
+          <div class="col-lg-4">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <img class="img-fluid rounded-circle mb-3" src="https://cdn4.iconfinder.com/data/icons/avatar-vol-1-3/512/11-128.png" alt="">
+              <h5 class="text-white">Cassie R.</h5>
+              <p class="text-white font-weight-light mb-0">"Protein, iron, and calcium are some of the nutritional benefits associated with cheeseburgers. Salad is essentially food for rabbits, so don’t bother wasting your time."</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <img class="img-fluid rounded-circle mb-3" src="https://cdn4.iconfinder.com/data/icons/avatar-vol-1-3/512/9-128.png" alt="">
+              <h5 class="text-white">Dom T.</h5>
+              <p class="font-weight-light mb-0 text-white">"Burgers are like a metaphor for life. All the good stuff is in the middle but the rest of it is necessary too. Just like life, burgers are meant to be relished."</p>
+            </div>
+          </div>
+          <div class="col-lg-4">
+            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
+              <img class="img-fluid rounded-circle mb-3" src="https://cdn4.iconfinder.com/data/icons/avatar-vol-1-3/512/3-128.png" alt="">
+              <h5 class="text-white">Delaney S.</h5>
+              <p class="font-weight-light mb-0 text-white">"A burger is more than just a sandwich, it is a wish fulfilled."</p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+
+
+
     <!-- ORDER NOW SECTION-->
     <section class="container-fluid text-center py-4 mt-4" id="contact">
       <h2 class="display-4 pb-4 my-4">Ready to place your order!</h2>
@@ -62,33 +96,9 @@
       <a href="/dishes" class="btn btn-dark btn-lg mb-4" role="button">Order Now</a>
     </section>
 
-    <!-- Image Showcases -->
-    <section class="showcase">
-      <div class="container-fluid p-0">
-        <div class="row no-gutters">
 
-          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('/images/showcase1.jpg');"></div>
-          <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Fully Responsive Design</h2>
-            <p class="lead mb-0">When you use a theme created by Start Bootstrap, you know that the theme will look great on any device, whether it's a phone, tablet, or desktop the page will behave responsively!</p>
-          </div>
-        </div>
-        <div class="row no-gutters">
-          <div class="col-lg-6 text-white showcase-img" style="background-image: url('/images/showcase2.jpg');"></div>
-          <div class="col-lg-6 my-auto showcase-text">
-            <h2>Updated For Bootstrap 4</h2>
-            <p class="lead mb-0">Newly improved, and full of great utility classes, Bootstrap 4 is leading the way in mobile responsive web development! All of the themes on Start Bootstrap are now using Bootstrap 4!</p>
-          </div>
-        </div>
-        <div class="row no-gutters">
-          <div class="col-lg-6 order-lg-2 text-white showcase-img" style="background-image: url('images/showcase3.jpg');"></div>
-          <div class="col-lg-6 order-lg-1 my-auto showcase-text">
-            <h2>Easy to Use &amp; Customize</h2>
-            <p class="lead mb-0">Landing Page is just HTML and CSS with a splash of SCSS for users who demand some deeper customization options. Out of the box, just add your content and images, and your new landing page will be ready to go!</p>
-          </div>
-        </div>
-      </div>
-    </section>
+
+
 
 
   </body>
