--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -142,15 +142,15 @@
 
   <!-- Shows the user an empty cart if they have not selected anything from the menu. -->
   <% } else { %>
-  <div class="row mt-2 rounded text-center justify-content-center">
-  <div class="card" style="width: 20rem;">
-  <img class="card-img-top" src="https://wavenetdelivery.ordering.co/templates/web/img/empty-cart.png" alt="Card image cap">
-    <h5 class="card-title">Your cart is empty!</h5>
-    <p class="card-text">Please add some delicious burgers from our menu page!</p>
-    <a href="/dishes" class="btn btn-dark">Menu</a>
+
+<div class="card shadow border-0 h-100 card-img-top">
+    <div class="card-body">
+      <img src="https://wavenetdelivery.ordering.co/templates/web/img/empty-cart.png" alt="Card image cap">
+      <h5 class="card-title">Your cart is empty!</h5>
+      <p class="card-text">Please add some delicious burgers from our menu page!</p>
+      <a href="/dishes" class="btn btn-dark">Menu</a>
+    </div>
   </div>
-</div>
-</div>
   <% } %>
   <%include partials/_footer%>
 </html>
