--- a/views/orders.ejs
+++ b/views/orders.ejs
@@ -42,10 +42,10 @@
         <% cart.forEach( item => { %>
             <li class="list-group-item d-flex justify-content-between lh-condensed">
               <div>
-                <h6 class="my-0"><%=item.name%></h6>
+                <p class="my-0"><%=item.name%></p>
               </div>
               <div>
-              <h6 class="my-0">Qty: <%=item.quantity%></h6>
+                <p class="my-0">Qty: <%=item.quantity%></p>
               </div>
               <div>
               <form class="delete-item" method="POST" action="/cart/<%=item.id%>/delete">
@@ -81,11 +81,10 @@
 
 <!-- Order confirmation form -->
 <div class="row mt-2 rounded text-center justify-content-center">
-<h4>Please fill out the below form to complete your order.</h4>
-<div class="col-md-6 order-md-1 mb-4">
-</div>
+<div class="col-md-10 order-md-1 mb-4">
+<p>Please fill out the below form to complete your order.</p>
 <form class="order-form" action="/orders" method="POST">
-  <div class="form-row">
+  <div class="form-row justify-content-center">
     <div class="form-group col-md-6">
       <input type="text" class="form-control" id="inputFirstName" name="firstName" placeholder="First name">
     </div>
@@ -93,7 +92,7 @@
       <input type="text" class="form-control" id="inputLastName" name="lastName" placeholder="Last name">
     </div>
   </div>
-  <div class="form-row">
+  <div class="form-row justify-content-center">
   <div class="form-group col-md-2">
     <label for="inputAddress">Street Number</label>
     <input type="text" class="form-control" id="inputAddress" name="streetNumber">
@@ -108,7 +107,7 @@
 </div>
   </div>
   <div class="form-row">
-    <div class="form-group col-md-6">
+    <div class="form-group col-md-4">
       <label for="inputCity">City</label>
       <input type="text" class="form-control" name="city" id="inputCity">
     </div>
@@ -128,12 +127,13 @@
         <option>Saskatchewan</option>
       </select>
     </div>
-    <div class="form-group col-md-2">
+    <div class="form-group col-md-4">
       <label for="inputPostal">Postal Code</label>
       <input type="text" class="form-control" name="postalCode" id="inputPostal">
       </div>
       </div>
       <button type="submit" class="btn btn-dark" data-toggle="modal" data-target="#submitModal">Submit Order</button>
+      </div>
       </div>
   </form>
 
