--- a/views/index.ejs
+++ b/views/index.ejs
@@ -4,32 +4,56 @@
 
 <html>
   <body>
-  <!--Carousel Layout-->
+
+
+    <!-- DO WELCOME sign-->
+
+    <section class="bg-dark" style="width:auto; height:100px">
+      <div class="text-center bg-dark">
+        <h2 class="mt-4 text-white" style="height:10p">Reviews</h2>
+      </div>
+    </section
+
+
+    <!-- Carousel Layout Section -->
+    <!-- Desc: Users will see the Photo slide given. -->
     <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
-    <div class="carousel-inner">
-      <div class="carousel-item active">
-        <img class="d-block w-100 carousel-images"  src="https://images.unsplash.com/photo-1520250868867-4428066809c3?ixlib=rb-1.2.1&auto=format&fit=crop&w=1162&q=80" alt="First slide">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100 carousel-images"  src="https://images.unsplash.com/photo-1520250868867-4428066809c3?ixlib=rb-1.2.1&auto=format&fit=crop&w=1162&q=80" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 carousel-images"  src="https://images.unsplash.com/photo-1511421616335-5a9846f1afcb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 carousel-images" src="https://images.unsplash.com/photo-1458677677220-000ddaa037e3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 carousel-images" src="https://images.unsplash.com/photo-1466978913421-dad2ebd01d17?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80" alt="Third slide">
+        </div>
       </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 carousel-images"  src="https://images.unsplash.com/photo-1511421616335-5a9846f1afcb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1489&q=80" alt="Second slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 carousel-images" src="https://images.unsplash.com/photo-1522036664039-3c5756c2b459?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Third slide">
-      </div>
-      <div class="carousel-item">
-        <img class="d-block w-100 carousel-images" src="https://images.unsplash.com/photo-1466978913421-dad2ebd01d17?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=967&q=80" alt="Third slide">
-      </div>
+
+
+      <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+
+
+      <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+
+
+
     </div>
-    <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
-      <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-      <span class="sr-only">Previous</span>
-    </a>
-    <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
-      <span class="carousel-control-next-icon" aria-hidden="true"></span>
-      <span class="sr-only">Next</span>
-    </a>
-  </div>
-    <!-- Services Section On Home Page -->
+    <!--END-->
+
+
+
+    <!-- Service Section -->
+    <!-- Desc: Users see the Service: Dining/Delivery/Etc. -->
     <section>
       <div class="container">
         <h2 class="m-3">Services</h2>
@@ -59,51 +83,89 @@
         </div>
       </div>
     </section>
+    <!--END-->
 
-    <!-- Testimonials -->
-    <section class="testimonials text-center bg-dark">
-      <div class="container">
-        <h2 class="mb- text-white">What people are saying...</h2>
-        <div class="row">
-          <div class="col-lg-4">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="https://cdn4.iconfinder.com/data/icons/avatar-vol-1-3/512/11-128.png" alt="">
-              <h5 class="text-white">Cassie R.</h5>
-              <p class="text-white font-weight-light mb-0">"Protein, iron, and calcium are some of the nutritional benefits associated with cheeseburgers. Salad is essentially food for rabbits, so don’t bother wasting your time."</p>
-            </div>
+
+
+    <!-- User Reviews Section -->
+    <!-- Desc: Team Template Theme used for the reviews.-->
+
+    <section class="mt">
+      <div class="text-center bg-dark">
+        <h2 class="mt-4 text-white">Reviews</h2>
+
+        <div class="row mt-4">
+          <div class="col-sm-6 col-lg-4 mb-4">
+            <img class="img-fluid rounded-circle mb-3" src="https://cdn4.iconfinder.com/data/icons/avatar-vol-1-3/512/11-128.png" alt="">
+            <h5 class="text-white">Cassie R.</h5>
+            <p class="text-white font-weight-light mb-0">"Protein, iron, and calcium are some of the nutritional benefits associated with cheeseburgers. Salad is essentially food for rabbits, so don’t bother wasting your time."</p>
           </div>
-          <div class="col-lg-4">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="https://cdn4.iconfinder.com/data/icons/avatar-vol-1-3/512/9-128.png" alt="">
-              <h5 class="text-white">Dom T.</h5>
-              <p class="font-weight-light mb-0 text-white">"Burgers are like a metaphor for life. All the good stuff is in the middle but the rest of it is necessary too. Just like life, burgers are meant to be relished."</p>
-            </div>
+
+          <div class="col-sm-6 col-lg-4 mb-4">
+            <img class="img-fluid rounded-circle mb-3" src="https://cdn4.iconfinder.com/data/icons/avatar-vol-1-3/512/9-128.png" alt="">
+            <h5 class="text-white">Dom T.</h5>
+            <p class="font-weight-light mb-0 text-white">"Burgers are like a metaphor for life. All the good stuff is in the middle but the rest of it is necessary too. Just like life, burgers are meant to be relished."</p>
           </div>
-          <div class="col-lg-4">
-            <div class="testimonial-item mx-auto mb-5 mb-lg-0">
-              <img class="img-fluid rounded-circle mb-3" src="https://cdn4.iconfinder.com/data/icons/avatar-vol-1-3/512/3-128.png" alt="">
-              <h5 class="text-white">Delaney S.</h5>
-              <p class="font-weight-light mb-0 text-white">"A burger is more than just a sandwich, it is a wish fulfilled."</p>
-            </div>
+
+          <div class="col-sm-6 col-lg-4 mb-4">
+            <img class="img-fluid rounded-circle mb-3" src="https://cdn4.iconfinder.com/data/icons/avatar-vol-1-3/512/3-128.png" alt="">
+            <h5 class="text-white">Delaney S.</h5>
+            <p class="font-weight-light mb-0 text-white">"A burger is more than just a sandwich, it is a wish fulfilled."</p>
           </div>
+
         </div>
       </div>
     </section>
+    <!--END-->
 
+
+    <!--Carousel Layout Section-->
+    <!--Desc: Users will see the Photo slide given.-->
+    <div id="carouselExampleFade" class="carousel slide carousel-fade" data-ride="carousel">
+      <div class="carousel-inner">
+        <div class="carousel-item active">
+          <img class="d-block w-100 carousel-images"  src="https://images.unsplash.com/photo-1529565214304-a882ebc5a8e6?ixlib=rb-1.2.1&auto=format&fit=crop&w=1500&q=80" alt="First slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 carousel-images"  src="https://images.unsplash.com/photo-1545823140-2b6f44dd8ddb?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Second slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 carousel-images" src="https://images.unsplash.com/photo-1522036664039-3c5756c2b459?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1050&q=80" alt="Third slide">
+        </div>
+        <div class="carousel-item">
+          <img class="d-block w-100 carousel-images" src="https://images.unsplash.com/photo-1477617722074-45613a51bf6d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjF9&auto=format&fit=crop&w=1050&q=80" alt="Third slide">
+        </div>
+      </div>
+
+
+      <a class="carousel-control-prev" href="#carouselExampleFade" role="button" data-slide="prev">
+        <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+        <span class="sr-only">Previous</span>
+      </a>
+
+
+      <a class="carousel-control-next" href="#carouselExampleFade" role="button" data-slide="next">
+        <span class="carousel-control-next-icon" aria-hidden="true"></span>
+        <span class="sr-only">Next</span>
+      </a>
+
+
+
+    </div>
+    <!--END-->
 
 
     <!-- ORDER NOW SECTION-->
+    <!--Desc: Another "option" to direct users to products(meal).-->
     <section class="container-fluid text-center py-4 mt-4" id="contact">
       <h2 class="display-4 pb-4 my-4">Ready to place your order!</h2>
       <p class="lead pb-3">Have a look at our................lorem......</p>
       <a href="/dishes" class="btn btn-dark btn-lg mb-4" role="button">Order Now</a>
     </section>
-
-
-
+    <!--END-->
 
 
 
   </body>
+  <%include partials/_footer%>
 </html>
-<%include partials/_footer%>
